Add ida.ipynb with stratified split, saving train/test, and visuals

--- a/ca_housing_project/analysis/ida.ipynb
+++ b/ca_housing_project/analysis/ida.ipynb
@@ -75,20 +75,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "88ced17b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved:\n",
-      " - C:\\Users\\MaxGillum\\Desktop\\492 ML PJ\\cmse492_aml\\ca_housing_project\\data\\train\\housing_train.csv\n",
-      " - C:\\Users\\MaxGillum\\Desktop\\492 ML PJ\\cmse492_aml\\ca_housing_project\\data\\test\\housing_test.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for frame in (train_set, test_set):\n",
     "    frame[\"rooms_per_household\"] = frame[\"total_rooms\"] / frame[\"households\"]\n",
@@ -106,11 +96,7 @@
     "test_raw  = test_set[raw_cols_13].copy()\n",
     "\n",
     "train_raw.to_csv(DATA_TRAIN / \"housing_train.csv\", index=False)\n",
-    "test_raw.to_csv(DATA_TEST  / \"housing_test.csv\", index=False)\n",
-    "\n",
-    "print(\"Saved:\")\n",
-    "print(\" -\", DATA_TRAIN / \"housing_train.csv\")\n",
-    "print(\" -\", DATA_TEST  / \"housing_test.csv\")\n"
+    "test_raw.to_csv(DATA_TEST  / \"housing_test.csv\", index=False)\n"
    ]
   },
   {
